--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.34"
 discord-rich-presence = "0.2.3"
+fern = { version = "0.6.2", features = ["chrono", "date-based"] }
+log = "0.4.20"
 tokio = { version = "1.36.0", features = ["full"] }
